Update Final Project_TEST 1_One Proportion.Rmd

--- a/Final Project_TEST 1_One Proportion.Rmd
+++ b/Final Project_TEST 1_One Proportion.Rmd
@@ -36,7 +36,7 @@ Because this data is reported from institutions and is a requirement to receive 
 
 ::: {.answer}
 
-Please write up your answer here.
+For Test 1, (1 proportion), we are going to explore the proportion of men enrolled at Westminster for academic years 2018 - 2022.
 
 
 
